--- a/acercadeNosotros.html
+++ b/acercadeNosotros.html
@@ -5,47 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acerca de Nosotros - Alquiler de Locales Deportivos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-        }
-        header {
-            background-color: #0a8043;
-            padding: 1rem;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-        .logo {
-            color: white;
-            font-size: 1.5rem;
-            font-weight: bold;
-        }
-        nav a {
-            color: white;
-            text-decoration: none;
-            margin-left: 1rem;
-            transition: color 0.3s ease;
-        }
-        nav a:hover {
-            color: #ff7f50;
-        }
-    </style>
 </head>
 <body>
-    <header>
-        <div class="logo">Space Sport</div>
+    <header class="bg-success text-white p-3 d-flex justify-content-between align-items-center">
+        <div class="fs-3 fw-bold">Space Sport</div>
         <nav>
-            <a href="index.html">Inicio</a>
-            <a href="acercadeNosotros.html">Nosotros</a>
-            <a href="#">Reservar Cancha</a>
-            <a href="#">Dueño de Cancha</a>
-            <a href="contactanos.html">Contacto</a>
+            <a href="index.html" class="text-white text-decoration-none mx-2">Inicio</a>
+            <a href="acercadeNosotros.html" class="text-white text-decoration-none mx-2">Nosotros</a>
+            <a href="#" class="text-white text-decoration-none mx-2">Reservar Cancha</a>
+            <a href="#" class="text-white text-decoration-none mx-2">Dueño de Cancha</a>
+            <a href="contactanos.html" class="text-white text-decoration-none mx-2">Contacto</a>
         </nav>
-        <a href="#" class="admin-button">Administra tu cancha</a>
+        <a href="#" class="btn btn-light">Administra tu cancha</a>
     </header>
+
     <!-- Encabezado de la página -->
     <header class="bg-dark text-white text-center py-5">
         <h1>Acerca de Nosotros</h1>
@@ -84,28 +57,28 @@
             <p>Nuestro equipo está formado por expertos apasionados por el deporte y comprometidos con ofrecerte el mejor servicio.</p>
             <div class="row">
                 <div class="col-md-4">
-                    <img src="img/img1.png" alt="Miembro del equipo" class="rounded-circle mb-3">
+                    <img src="img/img1.png" alt="Miembro del equipo" class="rounded-circle mb-3" style="width:150px;height:150px;">
                     <h5>Luis Fernando</h5>
                     <p>Director de Operaciones</p>
                 </div>
                 <div class="col-md-4">
-                    <img src="img/img2.png" alt="Miembro del equipo" class="rounded-circle mb-3">
+                    <img src="img/img2.png" alt="Miembro del equipo" class="rounded-circle mb-3" style="width:150px;height:150px;">
                     <h5>Henry Arevalo</h5>
                     <p>Gerente de Alquileres</p>
                 </div>
                 <div class="col-md-4">
-                    <img src="img/img3.png" alt="Miembro del equipo" class="rounded-circle mb-3">
+                    <img src="img/img3.png" alt="Miembro del equipo" class="rounded-circle mb-3" style="width:150px;height:150px;">
                     <h5>Paola Lopez</h5>
                     <p>Coordinadora de Atención al Cliente</p>
                 </div>
                 <div class="col-md-4">
-                    <img src="img/img4.png" alt="Miembro del equipo" class="rounded-circle mb-3">
-                    <h5>David Gonzalez </h5>
+                    <img src="img/img4.png" alt="Miembro del equipo" class="rounded-circle mb-3" style="width:150px;height:150px;">
+                    <h5>David Gonzalez</h5>
                     <p>Especialista en Marketing Digital</p>
                 </div>
                 <div class="col-md-4">
-                    <img src="img/img5.png" alt="Miembro del equipo" class="rounded-circle mb-3">
-                    <h5>David Gonzalez </h5>
+                    <img src="img/img5.png" alt="Miembro del equipo" class="rounded-circle mb-3" style="width:150px;height:150px;">
+                    <h5>David Gonzalez</h5>
                     <p>Gerente de Relaciones Públicas</p>
                 </div>
             </div>
