--- a/contactanos.html
+++ b/contactanos.html
@@ -3,78 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contáctanos - Alquiler de Locales Deportivos</title>
+    <title>Sport Space - Contactanos</title>
+    <link rel="icon" href="img/logo blanco.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            background-color: #f5f5f5;
-        }
-        .contact-form {
-            background: #ffffff;
-            border-radius: 10px;
-            padding: 30px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-        .contact-form h2 {
-            color: #333;
-            font-weight: 600;
-        }
-        .contact-form label {
-            font-weight: 500;
-        }
-        .btn-custom {
-            background-color: #007bff;
-            border-color: #007bff;
-            color: #fff;
-        }
-        .btn-custom:hover {
-            background-color: #0056b3;
-            border-color: #0056b3;
-        }
-
-        body, html {
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-        }
-        header {
-            background-color: #0a8043;
-            padding: 1rem;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-        .logo {
-            color: white;
-            font-size: 1.5rem;
-            font-weight: bold;
-        }
-        nav a {
-            color: white;
-            text-decoration: none;
-            margin-left: 1rem;
-            transition: color 0.3s ease;
-        }
-        nav a:hover {
-            color: #ff7f50;
-        }
-    </style>
 </head>
-
-
 <body>
 
-    <header>
-        <div class="logo">Space Sport</div>
+    <!-- Menú de navegación -->
+    <header class="bg-success text-white p-3 d-flex justify-content-between align-items-center">
+        <a href="index.html">
+            <img src="img/logo amarillo.png" alt="ATC Logo" class="img-fluid" style="width: 90px;">
+        </a>
         <nav>
-            <a href="index.html">Inicio</a>
-            <a href="acercadeNosotros.html">Nosotros</a>
-            <a href="#">Reservar Cancha</a>
-            <a href="#">Dueño de Cancha</a>
-            <a href="contactanos.html">Contacto</a>
+            <a href="index.html" class="text-white text-decoration-none me-3">Inicio</a>
+            <a href="acercadeNosotros.html" class="text-white text-decoration-none me-3">Nosotros</a>
+            <a href="#" class="text-white text-decoration-none me-3">Reservar Cancha</a>
+            <a href="#" class="text-white text-decoration-none me-3">Dueño de Cancha</a>
+            <a href="contactanos.html" class="text-white text-decoration-none">Contacto</a>
         </nav>
-        <a href="#" class="admin-button">Administra tu cancha</a>
+        <a href="#" class="btn btn-light">Administra tu cancha</a>
     </header>
+
     <!-- Encabezado de la página -->
     <header class="bg-dark text-white text-center py-5">
         <h1>Contáctanos</h1>
@@ -85,7 +34,7 @@
     <section class="container my-5">
         <div class="row justify-content-center">
             <div class="col-md-8">
-                <div class="contact-form">
+                <div class="bg-white rounded p-4 shadow-sm">
                     <h2 class="text-center mb-4">Envíanos un mensaje</h2>
                     <form action="#" method="POST">
                         <div class="mb-3">
@@ -109,7 +58,7 @@
                             <textarea class="form-control" id="message" name="message" rows="5" placeholder="Escribe tu mensaje aquí..." required></textarea>
                         </div>
                         <div class="d-grid">
-                            <button type="submit" class="btn btn-custom btn-lg">Enviar Mensaje</button>
+                            <button type="submit" class="btn btn-primary btn-lg">Enviar Mensaje</button>
                         </div>
                     </form>
                 </div>
