--- a/paginas/index.html
+++ b/paginas/index.html
@@ -23,6 +23,7 @@
         </a>
         <div>
             <a href="#" class="btn btn-light text-success fw-bold">Iniciar sesión</a>
+            <a href="#" class="btn btn-secondary fw-bold">Registrarse</a>
         </div>
     </header>
     <br>
